clusters/may-chang/brokul/assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brokul-assets
  namespace: brokul
  labels:
    app: brokul-assets
spec:
  type: ClusterIP
  ports:
  - { port: 9003, targetPort: 9003, protocol: TCP, name: api }
  - { port: 8081, targetPort: 8081, protocol: TCP, name: health }
  selector:
    app: brokul-assets
