clusters/may-chang/brokul/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brokul-core
  namespace: brokul
  labels:
    app: brokul-core
spec:
  type: ClusterIP
  ports:
  - { port: 9102, targetPort: 9102, protocol: TCP, name: api }
  - { port: 8081, targetPort: 8081, protocol: TCP, name: health }
  selector:
    app: brokul-core
