clusters/may-chang/brokul/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brokul-gateway
  namespace: brokul
  labels:
    app: brokul-gateway
spec:
  type: ClusterIP
  ports:
  - { port: 9998, targetPort: 9998, protocol: TCP, name: api }
  - { port: 8081, targetPort: 8081, protocol: TCP, name: health }
  selector:
    app: brokul-gateway
