clusters/may-chang/brokul/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brokul-web
  namespace: brokul
  labels:
    app: brokul-web
spec:
  type: ClusterIP
  ports:
  - { port: 3000, targetPort: 3000, protocol: TCP, name: http }
  selector:
    app: brokul-web
